      be Breaks instead, but only at wild-guess certainty for now.
  * checks/huge-usr-share{,.desc}:
    + [RA] Count file size from the tar listing rather than using du.  The
      results of du vary based on file system and other factors and make
      the tag difficult to test.
  * checks/init.d{,.desc}:
    + [RG] Check for init.d scripts depending on unknown virtual
      facilities.
  * checks/manpages{,.desc}:
    + [RA] Run man page checks using the en_US.UTF-8 locale now that we
      guarantee it exists.  Should hopefully fix occasional problems with
      col complaining about bad multibyte characters.  (Closes: #575661)
  * checks/menu-format.desc:
    + [RA] Fix typo in long description of duplicated-key-in-desktop-entry.
      Thanks, Niels Thykier.  (Closes: #580700)
  * checks/menus:
    + [RG] Recognise call to update-menus when using 'exec.'
    + [RA] Skip Haskell library documentation when warning about
      documentation not registered with doc-base.  Patch from Erik de
      Castro Lopo.  (Closes: #586877)
  * checks/rules.desc:
    + [RA] Add reference for debian-rules-makemaker-prefix-is-deprecated.
  * checks/scripts:
    + [RG] Correctly handle variables at the beginning of a call to
      dpkg-divert.  Thanks, Andreas Beckmann.  (Closes: #586984)

  * collection/objdump-info:
    + [RG] Disable etch compatibility code.
  * collection/strings:
    + [RG] Correctly handle ELF binaries with whitespaces in their name.
      (LP: #540342)

  * data/fields/architectures:
    + [RG] Refresh against dpkg 1.15.7.2.  (Closes: #581314, #584743)
  * data/fields/virtual-packages:
    + [RA] Update to current unstable and add the old xserver-xorg video
      and input virtual packages.
  * data/files/locale-codes:
    + [RG] Refresh to reflect change to private/refresh-locale-codes.
  * data/files/triplets:
    + [RG] Refresh against dpkg 1.15.7.2.
  * data/init.d/virtual_facilities
    + [RG] New list of virtual facilities that exist in the archive.